experiment3/parser.output
Terminals unused in grammar

   LBRACE
   RBRACE
   COMMA


状态 36 conflicts: 1 shift/reduce


语法

    0 $accept: P $end

    1 P: L
    2  | L P

    3 L: S SEM

    4 S: ID ASSIGN E
    5  | IF C THEN S
    6  | IF C THEN S ELSE S
    7  | WHILE C DO S

    8 C: E GT E
    9  | E LT E
   10  | E ASSIGN E

   11 E: E ADD T
   12  | E SUB T
   13  | T

   14 T: F
   15  | T MUL F
   16  | T DIV F

   17 F: LPAREN E RPAREN
   18  | ID
   19  | INT8
   20  | INT10
   21  | INT16
   22  | REAL8
   23  | REAL10
   24  | REAL16


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 4 18
INT8 (259) 19
INT10 (260) 20
INT16 (261) 21
REAL8 (262) 22
REAL10 (263) 23
REAL16 (264) 24
IF (265) 5 6
THEN (266) 5 6
ELSE (267) 6
WHILE (268) 7
DO (269) 7
ADD (270) 11
SUB (271) 12
MUL (272) 15
DIV (273) 16
GT (274) 8
LT (275) 9
ASSIGN (276) 4 10
LPAREN (277) 17
RPAREN (278) 17
LBRACE (279)
RBRACE (280)
SEM (281) 3
COMMA (282)


Nonterminals, with rules where they appear

$accept (28)
    左： 0
P (29)
    左： 1 2, 右： 0 2
L (30)
    左： 3, 右： 1 2
S (31)
    左： 4 5 6 7, 右： 3 5 6 7
C (32)
    左： 8 9 10, 右： 5 6 7
E (33)
    左： 11 12 13, 右： 4 8 9 10 11 12 17
T (34)
    左： 14 15 16, 右： 11 12 13 15 16
F (35)
    左： 17 18 19 20 21 22 23 24, 右： 14 15 16


State 0

    0 $accept: . P $end

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    P  转到状态 4
    L  转到状态 5
    S  转到状态 6


State 1

    4 S: ID . ASSIGN E

    ASSIGN  shift, and go to state 7


State 2

    5 S: IF . C THEN S
    6  | IF . C THEN S ELSE S

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    C  转到状态 16
    E  转到状态 17
    T  转到状态 18
    F  转到状态 19


State 3

    7 S: WHILE . C DO S

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    C  转到状态 20
    E  转到状态 17
    T  转到状态 18
    F  转到状态 19


State 4

    0 $accept: P . $end

    $end  shift, and go to state 21


State 5

    1 P: L .
    2  | L . P

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    $default  reduce using rule 1 (P)

    P  转到状态 22
    L  转到状态 5
    S  转到状态 6


State 6

    3 L: S . SEM

    SEM  shift, and go to state 23


State 7

    4 S: ID ASSIGN . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    E  转到状态 24
    T  转到状态 18
    F  转到状态 19


State 8

   18 F: ID .

    $default  reduce using rule 18 (F)


State 9

   19 F: INT8 .

    $default  reduce using rule 19 (F)


State 10

   20 F: INT10 .

    $default  reduce using rule 20 (F)


State 11

   21 F: INT16 .

    $default  reduce using rule 21 (F)


State 12

   22 F: REAL8 .

    $default  reduce using rule 22 (F)


State 13

   23 F: REAL10 .

    $default  reduce using rule 23 (F)


State 14

   24 F: REAL16 .

    $default  reduce using rule 24 (F)


State 15

   17 F: LPAREN . E RPAREN

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    E  转到状态 25
    T  转到状态 18
    F  转到状态 19


State 16

    5 S: IF C . THEN S
    6  | IF C . THEN S ELSE S

    THEN  shift, and go to state 26


State 17

    8 C: E . GT E
    9  | E . LT E
   10  | E . ASSIGN E
   11 E: E . ADD T
   12  | E . SUB T

    ADD     shift, and go to state 27
    SUB     shift, and go to state 28
    GT      shift, and go to state 29
    LT      shift, and go to state 30
    ASSIGN  shift, and go to state 31


State 18

   13 E: T .
   15 T: T . MUL F
   16  | T . DIV F

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 13 (E)


State 19

   14 T: F .

    $default  reduce using rule 14 (T)


State 20

    7 S: WHILE C . DO S

    DO  shift, and go to state 34


State 21

    0 $accept: P $end .

    $default  接受


State 22

    2 P: L P .

    $default  reduce using rule 2 (P)


State 23

    3 L: S SEM .

    $default  reduce using rule 3 (L)


State 24

    4 S: ID ASSIGN E .
   11 E: E . ADD T
   12  | E . SUB T

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 4 (S)


State 25

   11 E: E . ADD T
   12  | E . SUB T
   17 F: LPAREN E . RPAREN

    ADD     shift, and go to state 27
    SUB     shift, and go to state 28
    RPAREN  shift, and go to state 35


State 26

    5 S: IF C THEN . S
    6  | IF C THEN . S ELSE S

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    S  转到状态 36


State 27

   11 E: E ADD . T

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    T  转到状态 37
    F  转到状态 19


State 28

   12 E: E SUB . T

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    T  转到状态 38
    F  转到状态 19


State 29

    8 C: E GT . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    E  转到状态 39
    T  转到状态 18
    F  转到状态 19


State 30

    9 C: E LT . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    E  转到状态 40
    T  转到状态 18
    F  转到状态 19


State 31

   10 C: E ASSIGN . E

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    E  转到状态 41
    T  转到状态 18
    F  转到状态 19


State 32

   15 T: T MUL . F

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    F  转到状态 42


State 33

   16 T: T DIV . F

    ID      shift, and go to state 8
    INT8    shift, and go to state 9
    INT10   shift, and go to state 10
    INT16   shift, and go to state 11
    REAL8   shift, and go to state 12
    REAL10  shift, and go to state 13
    REAL16  shift, and go to state 14
    LPAREN  shift, and go to state 15

    F  转到状态 43


State 34

    7 S: WHILE C DO . S

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    S  转到状态 44


State 35

   17 F: LPAREN E RPAREN .

    $default  reduce using rule 17 (F)


State 36

    5 S: IF C THEN S .
    6  | IF C THEN S . ELSE S

    ELSE  shift, and go to state 45

    ELSE      [reduce using rule 5 (S)]
    $default  reduce using rule 5 (S)


State 37

   11 E: E ADD T .
   15 T: T . MUL F
   16  | T . DIV F

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 11 (E)


State 38

   12 E: E SUB T .
   15 T: T . MUL F
   16  | T . DIV F

    MUL  shift, and go to state 32
    DIV  shift, and go to state 33

    $default  reduce using rule 12 (E)


State 39

    8 C: E GT E .
   11 E: E . ADD T
   12  | E . SUB T

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 8 (C)


State 40

    9 C: E LT E .
   11 E: E . ADD T
   12  | E . SUB T

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 9 (C)


State 41

   10 C: E ASSIGN E .
   11 E: E . ADD T
   12  | E . SUB T

    ADD  shift, and go to state 27
    SUB  shift, and go to state 28

    $default  reduce using rule 10 (C)


State 42

   15 T: T MUL F .

    $default  reduce using rule 15 (T)


State 43

   16 T: T DIV F .

    $default  reduce using rule 16 (T)


State 44

    7 S: WHILE C DO S .

    $default  reduce using rule 7 (S)


State 45

    6 S: IF C THEN S ELSE . S

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    S  转到状态 46


State 46

    6 S: IF C THEN S ELSE S .

    $default  reduce using rule 6 (S)
